[package]
name = "axum_proj"
readme = "README.md"
authors = ["Grady Denton"]
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
axum = "0.8.7"
askama = "0.14.0"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }
anyhow = "1.0.100"
